kubernetes/services/radunenu-com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radunenu-com
  namespace: radunenu-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Websites
    gethomepage.dev/name: RaduNenu.com
    gethomepage.dev/icon: mdi-web
    gethomepage.dev/description: Personal website
    gethomepage.dev/weight: "100"
    gethomepage.dev/siteMonitor: http://radunenu-com.radunenu-com.svc.cluster.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radunenu.com
      secretName: radunenu-com-tls
  rules:
    - host: radunenu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radunenu-com
                port:
                  number: 80
